tests/errors/ellipsis_syntax_1.pyx
# mode: error

. ..

_ERRORS = u"""
3: 0: Expected an identifier or literal
"""
